--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     
                     <div class="col-3">
     
-                        <div class="section-heading" style="padding: 0 0 15px 0;">
+                        <div class="section-heading" style="padding: 0 0 15px 0;" data-aos="fade-up">
                             <h3>Facillities from OSL</h3>
                             <p class="section-subtitle" style="font-size: 18px; padding-top: 0;">OSC not only provides guidance but also has a wide variety of Hardware and Software is available at its lab,OSL.</p>
                         </div>
