--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="favicon.png" alt="Homepage">
+                <img src="osc-logo.png" alt="Homepage">
             </a>
         </div> <!-- end header-logo -->
 
@@ -652,6 +652,8 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script type="text/javascript">
+</script> 
 
 </body>
 
