--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <div class="row home-content__main">
                 <div class="brand-heading">
-                    <span class="txt-rotate" data-period="100" data-rotate='[ "Hello,", "ನಮಸ್ಕಾರ,", "नमस्ते,", "నమస్తే,"]'></span>
+                    <span class="txt-rotate" data-period="100" data-rotate='[ "Hello,", "ನಮಸ್ಕಾರ,", "नमस्ते,"]'></span>
                 </div>
                 <h1>
                 We are OSL VVCE.
